# PRGR_Project

./: .gitignore  AUTO_EXPOSURE_CPP_QUICKSTART.md  AUTO_EXPOSURE_README.md  AUTO_EXPOSURE_UX_DESIGN.md  BALL_TRACKING_SETUP_GUIDE.md  CAMERA_OPTIMIZATION_PLAN.md  CMakeLists.txt  COMPLETE_FIX_GUIDE.md  DIY_Launch_Monitor_Project_Status.md  DesignSystem.qml  GNU_RADIO_COMPANION_GUIDE.md  GRC_QUICK_STEPS.txt  HistoryManager.py  INSTALLATION_CHECKLIST.md  INSTALL_FAST_DETECTION.sh  KLD2_INTEGRATION.md  KLD2_QUICK_START.txt  KLD2_SETUP.md  MLM2_PRO_IMPLEMENTATION_STATUS.md  Makefile.radar  ProfileManager.py  README.md  README_CPP.md  REBUILD_CPP.md  SettingsManager.py  TROUBLESHOOTING.md  analyze_radar_capture.py  auto_exposure.py  ball_tracker.py  build_fast_detection.sh  capture_radar_frames.py  check_power.py  debug_kld2.py  diagnose_capture.py  diagnose_detection.py  diagnose_kld2.py  diagnose_kld2_protocol.py  extract_ball_templates.py  fps_benchmark.py  gnuradio_kld2_monitor.py  (+39 more)
RaspPi Setup/: QUICK_REFERENCE.txt  README.md  fix_qml_modules.sh  requirements.txt  run.sh  setup_raspi.sh
cpp_module/: CMakeLists.txt  README.md  build.sh  fast_detection.cpp  setup.py
docs/: FAST_DETECTION_README.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  SPIN_TESTING_README.md
fast_auto_exposure/: README.md  build.sh  fast_auto_exposure.cpp  setup.py
include/: AutoExposureController.h  BallDetector.h  BallTracker.h  CalibrationManager.h  CameraCalibration.h  CameraManager.h  CaptureManager.h  FrameProvider.h  KLD2Manager.h  SettingsManager.h  SoundManager.h  TrajectoryTracker.h
profiler_ui_v1_1/: main.py  main.qml
profiler_ui_v1_1/screens/: AppWindow.qml  BallSettings.qml  CalibrationScreen.qml  LaunchSettings.qml  MyBag.qml  MyBagScreen.qml  ProfileScreen.qml  SettingsScreen.qml  TempSettings.qml  WindSettings.qml
screens/: AppWindow.qml  BallPositionOverlay.qml  BallSettings.qml  BallZoneCalibration.qml  CalibrationScreen.qml  CameraScreen.qml  CameraSettings.qml  CameraTestScreen.qml  HistoryScreen.qml  KLD2TestScreen.qml  LaunchSettings.qml  MyBag.qml  ProfileScreen.qml  SettingsScreen.qml  TempSettings.qml  TrackingTest.qml  WindSettings.qml
screens/Components/: ContextStrip.qml  MetricCard.qml  NavBar.qml  (+1 more)
sounds/: Download.py
src/: AutoExposureController.cpp  BallDetector.cpp  BallTracker.cpp  CalibrationManager.cpp  CameraCalibration.cpp  CameraManager.cpp  CaptureManager.cpp  FrameProvider.cpp  KLD2Manager.cpp  SettingsManager.cpp  SoundManager.cpp  TrajectoryTracker.cpp  main.cpp
tools/: benchmark_detection.py
